--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,16 @@ body {
 }
 
 canvas {
-  heigth: 100%;
   width: 100%;
   background-color: lightblue;
+}
+
+* { margin: 0; padding: 0;}
+
+body, html { height:100%; }
+
+#myCanvas {
+    position:absolute;
+    width:100%;
+    height:100%;
 }
