--- a/styles/style.css
+++ b/styles/style.css
@@ -23,3 +23,19 @@ body, html { height:100%; }
     width:100%;
     height:100%;
 }
+
+#asset1 {
+  position: fixed;
+  width: 40vw;
+  height: auto;
+  top: 1cm;
+  left: 1cm;
+}
+
+#asset2 {
+  position: fixed;
+  width: 20vw;
+  height: auto;
+  bottom: 1cm;
+  right: 1cm;
+}
