--- a/styles/style.css
+++ b/styles/style.css
@@ -39,3 +39,9 @@ body, html { height:100%; }
   bottom: 1cm;
   right: 1cm;
 }
+
+@media only screen and (max-width: 600px) {
+  #asset1 {
+    width: 70vw;
+  }
+}
